2012-07-26  Pravin D  <pravind.2k4@gmail.com>

        Outline is always painted on the first table row regardless of the row it's set on
        https://bugs.webkit.org/show_bug.cgi?id=92389

        Reviewed by Eric Seidel.

        * fast/table/table-row-outline-paint.html: Added.
        * platform/chromium-linux/fast/table/table-row-outline-paint-expected.png: Added.
        * platform/chromium-linux/fast/table/table-row-outline-paint-expected.txt: Added.
          Paint phase issue.

2012-07-26  Andrew Wilson  <atwilson@chromium.org>

        Unreviewed chromium expectations change to mark inspector tests as SLOW.

        * platform/chromium/TestExpectations:

2012-07-26  Emil A Eklund  <eae@chromium.org>

        Unreviewed chromium mac/win rebaseline post r123782.

        * css2.1/t080301-c411-vt-mrgn-00-b-expected.txt: Added.
        * platform/chromium-mac-snowleopard/css2.1/t080301-c411-vt-mrgn-00-b-expected.txt: Added.
        * platform/chromium-mac-snowleopard/svg/custom/svg-fonts-in-html-expected.png:
        * platform/chromium-mac/svg/custom/svg-fonts-in-html-expected.png:
        * platform/chromium-mac/svg/custom/svg-fonts-in-html-expected.txt:
        * platform/chromium-win/svg/custom/svg-fonts-in-html-expected.png:
        * platform/efl/css2.1/t080301-c411-vt-mrgn-00-b-expected.txt: Removed.
        * platform/gtk/css2.1/t080301-c411-vt-mrgn-00-b-expected.txt: Removed.

2012-07-25  Ryosuke Niwa  <rniwa@webkit.org>

        Href attribute with javascript protocol is stripped when content is pasted into a XML doucment
        https://bugs.webkit.org/show_bug.cgi?id=92310

        Reviewed by Adam Barth.

        Rebaseline a test that catches this bug.

        * editing/pasteboard/paste-noscript-xhtml-expected.txt:

2012-07-26  Dan Bernstein  <mitz@apple.com>

        <svg> element with no intrinsic size and max-width gets sized incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=92410

        Reviewed by Dean Jackson.
