@@ -1,3 +1,15 @@
+2012-07-26  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r123525.
+        http://trac.webkit.org/changeset/123525
+        https://bugs.webkit.org/show_bug.cgi?id=92421
+
+        it needed to be rolled out after r123779 too (Requested by
+        jchaffraix on #webkit).
+
+        * rendering/RenderObjectChildList.cpp:
+        (WebCore::RenderObjectChildList::insertChildNode):
+
 2012-07-26  Pravin D  <pravind.2k4@gmail.com>
 
         Outline is always painted on the first table row regardless of the row it's set on
